--- a/PROJECT/Single_ch_Receiver_SW_GOWIN.uvprojx
+++ b/PROJECT/Single_ch_Receiver_SW_GOWIN.uvprojx
@@ -10,7 +10,7 @@
       <TargetName>led</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>6160000::V6.16::ARMCLANG</pCCUsed>
+      <pCCUsed>5060960::V5.06 update 7 (build 960)::.\ARMCC</pCCUsed>
       <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
@@ -472,6 +472,11 @@
               <FileName>main.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\USER\main.c</FilePath>
+            </File>
+            <File>
+              <FileName>retarget.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\USER\retarget.c</FilePath>
             </File>
           </Files>
         </Group>
